# gsl_test

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: test.csv  train.csv
src/: line_eval.cc  line_fit.hh  main.cpp  test_line_fit.cc
